--- a/DrugRegimen/static/home/doctorhome.html
+++ b/DrugRegimen/static/home/doctorhome.html
@@ -104,58 +104,62 @@
 </head>
 
 <body>
-    <header>
-        <h2 id="title">Drug Regimen Dashboard</h2>
-        <nav class="navbar">
-            <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
-            <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
-            <a href='http://127.0.0.1:8000/manage' class="left-nav">Manage Patients</a>
-            <a href='http://127.0.0.1:8000/prescribe' class="left-nav">Prescribe Medication</a>
-            <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
-            <div class="dropdown">
-                <a href='#' class="dropbtn">{{ username }}</a>
-                <div class="dropdown-content">
-                    <a href="http://127.0.0.1:8000/account">Account</a>
-                    <a href="http://127.0.0.1:8000">Sign Out</a>
+    <div id="page-container">
+        <header>
+            <h2 id="title">Drug Regimen Dashboard</h2>
+            <nav class="navbar">
+                <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
+                <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
+                <a href='http://127.0.0.1:8000/manage' class="left-nav">Manage Patients</a>
+                <a href='http://127.0.0.1:8000/prescribe' class="left-nav">Prescribe Medication</a>
+                <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
+                <div class="dropdown">
+                    <a href='#' class="dropbtn">{{ username }}</a>
+                    <div class="dropdown-content">
+                        <a href="http://127.0.0.1:8000/account">Account</a>
+                        <a href="http://127.0.0.1:8000">Sign Out</a>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <main><div id="pagecontent">
-        <div id="subnav">
-            <h3>Doctor Help</h2>
-        </div>
-        {% for item in patientsAndDrugs %}
-        <div class="patient-summary">
-            <div class="patient-details">
-                <a href='#' class="patient-details" id="patient-name">{{ item.0 }}</a>
-            </div>
-            <div class="patient-details" id="meds">
-                <ul>
-                    <li>{{ item.1.drug }} {{ item.1.doseValue }} {{ item.1.doseUnit }}</li>
-                </ul>
-            </div>
-            <div id="time-last-taken" class="patient-details">
-                <ul>
-                    <li>{{ item.2 }}</li>
-                </ul>
-            </div>
-            <div id="require-videos" class="patient-details">
-                <input type="checkbox" id="require1" name="require1" value="Required">
-                <label for="require1"> Require videos</label>
-            </div>
-            <video class="video-player" width="22%" height="240" controls>
-                <source src="media/recorded-videos/{{ item.1.videoURL }}_{{ date }}.webm" type="video/webm">
-                Your browser does not support the video tag.
-            </video>
+            </nav>
+        </header>
+        <main>
+            <div id="pagecontent">
+                <div id="subnav">
+                    <h3>Doctor Help</h2>
+                </div>
+                {% for item in patientsAndDrugs %}
+                <div class="patient-summary">
+                    <div class="patient-details">
+                        <a href='#' class="patient-details" id="patient-name">{{ item.0 }}</a>
+                    </div>
+                    <div class="patient-details" id="meds">
+                        <ul>
+                            <li>{{ item.1.drug }} {{ item.1.doseValue }} {{ item.1.doseUnit }}</li>
+                        </ul>
+                    </div>
+                    <div id="time-last-taken" class="patient-details">
+                        <ul>
+                            <li>{{ item.2 }}</li>
+                        </ul>
+                    </div>
+                    <div id="require-videos" class="patient-details">
+                        <input type="checkbox" id="require1" name="require1" value="Required">
+                        <label for="require1"> Require videos</label>
+                    </div>
+                    <video class="video-player" width="22%" height="240" controls>
+                        <source src="media/recorded-videos/{{ item.1.videoURL }}_{{ date }}.webm" type="video/webm">
+                        Your browser does not support the video tag.
+                    </video>
 
-        </div>
-        {% endfor %}
-    </div></main>
-    <footer class="footer">
-        <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
-        <div class="text">Copyright &copy; Team 5 2021</div>
-</footer>
+                </div>
+                {% endfor %}
+            </div>
+        </main>
+        <footer class="footer">
+            <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
+            <div class="text">Copyright &copy; Team 5 2021</div>
+        </footer>
+    </div>
 </body>
 
 </html>
