--- a/DrugRegimen/static/prescribe-medication/prescribe.html
+++ b/DrugRegimen/static/prescribe-medication/prescribe.html
@@ -2,162 +2,168 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prescribe Medication</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
-    <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
-    <style>
-        input[type=text], select {
-          width: 100%;
-          padding: 12px 20px;
-          margin: 8px 0;
-          display: inline-block;
-          border: 1px solid #ccc;
-          border-radius: 4px;
-          box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Prescribe Medication</title>
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
+  <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
+  <style>
+    input[type=text],
+    select {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
 
-        input[type=number], select {
-          width: 100%;
-          padding: 12px 20px;
-          margin: 8px 0;
-          display: inline-block;
-          border: 1px solid #ccc;
-          border-radius: 4px;
-          box-sizing: border-box;
-        }
+    input[type=number],
+    select {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
 
-        input[type=submit] {
-          width: 100%;
-          background-color: #4CAF50;
-          color: white;
-          padding: 14px 20px;
-          margin: 8px 0;
-          border: none;
-          border-radius: 4px;
-          cursor: pointer;
-        }
+    input[type=submit] {
+      width: 100%;
+      background-color: #4CAF50;
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
 
-        input[type=submit]:hover {
-          background-color: #45a049;
-        }
+    input[type=submit]:hover {
+      background-color: #45a049;
+    }
 
-        .prescribe {
-          border-radius: 5px;
-          background-color: #f2f2f2;
-          padding: 20px;
-        }
-    </style>
+    .prescribe {
+      border-radius: 5px;
+      background-color: #f2f2f2;
+      padding: 20px;
+    }
+  </style>
 </head>
 
 <body>
+  <div id="page-container">
     <header>
-        <h2 id="title">Drug Regimen</h2>
-        <nav class="navbar">
-            <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
-            <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
-            <a href='http://127.0.0.1:8000/manage' class="left-nav">Manage Patients</a>
-            <a href='http://127.0.0.1:8000/prescribe' class="left-nav">Prescribe Medication</a>
-            <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
-            <div class="dropdown">
-                <a href='#' class="dropbtn">{{ username }}</a>
-                <div class="dropdown-content">
-                    <a href="http://127.0.0.1:8000/account">Account</a>
-                    <a href="http://127.0.0.1:8000">Sign Out</a>
-                </div>
-            </div>
-        </nav>
+      <h2 id="title">Drug Regimen</h2>
+      <nav class="navbar">
+        <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
+        <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
+        <a href='http://127.0.0.1:8000/manage' class="left-nav">Manage Patients</a>
+        <a href='http://127.0.0.1:8000/prescribe' class="left-nav">Prescribe Medication</a>
+        <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
+        <div class="dropdown">
+          <a href='#' class="dropbtn">{{ username }}</a>
+          <div class="dropdown-content">
+            <a href="http://127.0.0.1:8000/account">Account</a>
+            <a href="http://127.0.0.1:8000">Sign Out</a>
+          </div>
+        </div>
+      </nav>
     </header>
-    <main><div id="pagecontent">
-        <div class = prescribe>
-            <form action="/write-prescription" method="post">
-                {% csrf_token %}
-                <label for="patient">Choose Patient: </label>
-                <select id="patient" name="patient">
-                {% for patient in patients %}
-                  <option value={{ patient }}>{{ patient }}</option>
-                {% endfor %}
-                </select> 
-                <br><br>
-                
-                <label for="pharmacy">Choose Pharmacy: </label>
-                <select id="pharmacy" name="pharmacy">
-                {% for pharmacy in pharmacies %}
-                  <option value={{ pharmacy }}>{{ pharmacy }}</option>
-                {% endfor %}
-                </select>
-                <br><br>
+    <main>
+      <div id="pagecontent">
+        <div class=prescribe>
+          <form action="/write-prescription" method="post">
+            {% csrf_token %}
+            <label for="patient">Choose Patient: </label>
+            <select id="patient" name="patient">
+              {% for patient in patients %}
+              <option value={{ patient }}>{{ patient }}</option>
+              {% endfor %}
+            </select>
+            <br><br>
 
-                <label for="drug">Drug: </label>
-                <input id="drug" type="text" name="drug">
-                <br><br>
+            <label for="pharmacy">Choose Pharmacy: </label>
+            <select id="pharmacy" name="pharmacy">
+              {% for pharmacy in pharmacies %}
+              <option value={{ pharmacy }}>{{ pharmacy }}</option>
+              {% endfor %}
+            </select>
+            <br><br>
 
-                <label for="DosageForm">Dosage Form: </label>
-                <input id="dosage-form" type="text" name="dosage-form">
-                <br><br>
+            <label for="drug">Drug: </label>
+            <input id="drug" type="text" name="drug">
+            <br><br>
 
-                <label for="DosageValue">Dose Value: </label>
-                <input id="dose-value" type="number" name="dose-value">
-                <br><br>
+            <label for="DosageForm">Dosage Form: </label>
+            <input id="dosage-form" type="text" name="dosage-form">
+            <br><br>
 
-                <label for="DoseUnit">Dose Unit: </label>
-                <input id="dose-unit" type="text" name="dose-unit">
-                <br><br>
+            <label for="DosageValue">Dose Value: </label>
+            <input id="dose-value" type="number" name="dose-value">
+            <br><br>
 
-                <label for="DurationValue">Duration Value: </label>
-                <input id="duration-value" type="number" name="duration-value">
-                <br><br>
+            <label for="DoseUnit">Dose Unit: </label>
+            <input id="dose-unit" type="text" name="dose-unit">
+            <br><br>
 
-                <label for="DurationUnit">Duration Unit: </label>
-                <select id="duration-unit" name="duration-unit">
-                  <option value="days">Days</option>
-                  <option value="weeks">Weeks</option>
-                  <option value="months">Months</option>
-                </select>
-                <br><br>
+            <label for="DurationValue">Duration Value: </label>
+            <input id="duration-value" type="number" name="duration-value">
+            <br><br>
 
-
-                <label for="frequency">Frequency: </label>
-                <input id="frequency" type="text" name="frequency">
-                <br><br>
+            <label for="DurationUnit">Duration Unit: </label>
+            <select id="duration-unit" name="duration-unit">
+              <option value="days">Days</option>
+              <option value="weeks">Weeks</option>
+              <option value="months">Months</option>
+            </select>
+            <br><br>
 
 
-                <label for="route">Route: </label>
-                <input id="route" type="text" name="route">
-                <br><br>
+            <label for="frequency">Frequency: </label>
+            <input id="frequency" type="text" name="frequency">
+            <br><br>
 
-                <label for="quantity">Quantity: </label>
-                <input id="quantity" type="text" name="quantity">
-                <br><br>
 
-                <label for="status">Status: </label>
-                <input id="status" type="text" name="status">
-                <br><br>
-                <!--
+            <label for="route">Route: </label>
+            <input id="route" type="text" name="route">
+            <br><br>
+
+            <label for="quantity">Quantity: </label>
+            <input id="quantity" type="text" name="quantity">
+            <br><br>
+
+            <label for="status">Status: </label>
+            <input id="status" type="text" name="status">
+            <br><br>
+            <!--
                 <label for="start-date">Start Date: </label>
                 <input id="start-date" type="date" name="start-date">
                 <br><br>
                 Start date set to Null and changed on first video upload by user.
                 -->
 
-                <label for="video-required">Video Required: </label>
-                <input id="video-required" type="checkbox" name="video-required">
-                <br><br>
+            <label for="video-required">Video Required: </label>
+            <input id="video-required" type="checkbox" name="video-required">
+            <br><br>
 
-                <label for="comment">Comment: </label>
-                <input id="comment" type="text" name="comment">
-                <br><br>
+            <label for="comment">Comment: </label>
+            <input id="comment" type="text" name="comment">
+            <br><br>
 
-                <input type="submit" value="Prescribe">
-            </form>
+            <input type="submit" value="Prescribe">
+          </form>
         </div>
-    </div></main>
+      </div>
+    </main>
     <footer class="footer">
-        <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
-        <div class="text">Copyright &copy; Team 5 2021</div>
-</footer>
+      <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
+      <div class="text">Copyright &copy; Team 5 2021</div>
+    </footer>
+  </div>
 </body>
 
 </html>
