--- a/DrugRegimen/static/print-qrcodes/print-qrcodes.html
+++ b/DrugRegimen/static/print-qrcodes/print-qrcodes.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
     <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
     <style>
-
         .patient-summary {
             position: relative;
             overflow: hidden;
@@ -50,7 +49,7 @@
             list-style-type: none;
             padding: 0px 20px;
             margin: 0;
-    
+
         }
 
         .patient-details ul {
@@ -73,33 +72,37 @@
 </head>
 
 <body>
-    <header>
-        <h2 id="title">Drug Regimen Dashboard</h2>
-        <nav class="navbar">
-            <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
-            <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
-            <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
-            <div class="dropdown">
-                <a href='#' class="dropbtn">{{ username }}</a>
-                <div class="dropdown-content">
-                    <a href="http://127.0.0.1:8000/account">Account</a>
-                    <a href="http://127.0.0.1:8000">Sign Out</a>
+    <div id="page-container">
+        <header>
+            <h2 id="title">Drug Regimen Dashboard</h2>
+            <nav class="navbar">
+                <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
+                <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
+                <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
+                <div class="dropdown">
+                    <a href='#' class="dropbtn">{{ username }}</a>
+                    <div class="dropdown-content">
+                        <a href="http://127.0.0.1:8000/account">Account</a>
+                        <a href="http://127.0.0.1:8000">Sign Out</a>
+                    </div>
                 </div>
+            </nav>
+        </header>
+        <main>
+            <div id="pagecontent">
+                {% for item in itemURLs %}
+                <div class="patient-summary">
+                    <h2>{{ item.0.drug }}</h2>
+                    <img src="{{ item.1 }}">
+                </div>
+                {% endfor %}
             </div>
-        </nav>
-    </header>
-    <main><div id="pagecontent">
-        {% for item in itemURLs %}
-        <div class="patient-summary">
-            <h2>{{ item.0.drug }}</h2>
-            <img src="{{ item.1 }}">
-        </div>
-        {% endfor %}
-    </div></main>
-    <footer class="footer">
-        <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
-        <div class="text">Copyright &copy; Team 5 2021</div>
-</footer>
+        </main>
+        <footer class="footer">
+            <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
+            <div class="text">Copyright &copy; Team 5 2021</div>
+        </footer>
+    </div>
 </body>
 
 </html>
