Confidence score tweaking

--- a/DrugRegimen/static/home/patienthome.html
+++ b/DrugRegimen/static/home/patienthome.html
@@ -87,8 +87,7 @@
                 {% for medication in medications %}
                 <div class="prescription-summary">
                     <div class="prescription-details">
-                        <a href='#' class="prescription-details" id="medication">{{ medication.drug }} {{
-                            medication.doseValue }} {{ medication.doseUnit }}</a>
+                        <a href='#' class="prescription-details" id="medication">{{ medication.drug }} {{ medication.doseValue }} {{ medication.doseUnit }}</a>
                     </div>
                     <div class="prescription-details" id="time-last-taken">
                         <p>09:30 AM</p>
