--- a/DrugRegimen/static/account/doctoraccount.html
+++ b/DrugRegimen/static/account/doctoraccount.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h2 id="title">Doctor Account</h2>
+        <div class="imgbrand"><img style="margin-left: 50px;" width="8%" height="8%" src="{% static 'admin/img/regx.png' %}"></div>
         <nav class="navbar">
             <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
             <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
