--- a/DrugRegimen/static/home/doctorhome.html
+++ b/DrugRegimen/static/home/doctorhome.html
@@ -106,7 +106,7 @@
 <body>
     <div id="page-container">
         <header>
-            <h2 id="title">Drug Regimen Dashboard</h2>
+            <div class="imgbrand"><img style="margin-left: 50px;" width="8%" height="8%" src="{% static 'admin/img/regx.png' %}"></div>
             <nav class="navbar">
                 <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
                 <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
