provisional registration page

--- a/DrugRegimen/static/login/login.html
+++ b/DrugRegimen/static/login/login.html
@@ -86,6 +86,9 @@
             <label>&nbsp;</label><input type="submit" value="Log in">
           </div>
         </form>
+          <div class="submit-row">
+            <label>&nbsp;</label><input type="submit" value="Register">
+          </div>
 
       </div>
 
