Register new account working

--- a/DrugRegimen/static/login/login.html
+++ b/DrugRegimen/static/login/login.html
@@ -87,7 +87,7 @@
           </div>
         </form>
           <div class="submit-row">
-            <label>&nbsp;</label><input type="submit" value="Register">
+            <a href="register"><input type="submit" value="Register"></a>
           </div>
 
       </div>
